# nid

./: .env.example  .gitignore  .gitmodules  AGENTS.md  AGENTS_OLD.md  CURRENT_STATUS.md  IMPLEMENTATION_PLAN.md  PROMPT.md  PYINSTALLER_BUILD.md  README.md  REPL_GUIDE.md  THOUGHTS.md  add_crow_v1_prompt.py  agent-client-design.md  check_acp_agent.py  crow_agent_example.py  crow_inspect.py  database.py  fire_up_echo.py  integration-options.md  kernel_kernel.py  pyproject.toml  pytest.ini  quick_test.py  simple_crow_agent.py  streaming_async_react.py  streaming_async_react_with_db.py  streaming_react.py  terminal_demo.py  test_client_caps.py  test_crow_e2e.py  test_terminal_client.py  zai_tool_integration.py
.github/workflows/: build-binaries.yml  publish-crow-cli.yml  publish-crow-mcp.yml
crow-acp/: README.md  TODO.md  pyproject.toml
crow-acp-learning/: fire_up_echo.py
crow-acp/scripts/: client.py  mc_escher_loop.py
crow-acp/src/crow_acp/: __init__.py  acp_tools.py  agent.py  client_tools.py  compact.py  config.py  constants.py  context.py  db.py  db_v2.py  hooks.py  llm.py  logger.py  mcp_client.py  react.py  session.py  skills.py  state.py  tools.py
crow-acp/src/crow_acp/prompts/: system_prompt.jinja2
crow-acp/tests/: test_agent_config.py  test_session_initial_messages.py
crow-cli/: README.md  TODO.md  crow-cli.spec  pyproject.toml
crow-cli/config/: config.yaml
crow-cli/examples/: quick_test.py
crow-cli/src/crow_cli/: agent_runner.py
crow-cli/src/crow_cli/agent/: __init__.py  compact.py  configure.py  context.py  db.py  llm.py  main.py  prompt.py  react.py  session.py  tools.py
crow-cli/src/crow_cli/agent/default/: .env.example  compose.yaml  config.yaml
crow-cli/src/crow_cli/agent/default/prompts/: system_prompt.jinja2
crow-cli/src/crow_cli/agent/default/searxng/: settings.yml
crow-cli/src/crow_cli/cli/: init_cmd.py  main.py
crow-cli/src/crow_cli/client/: main.py
crow-cli/tests/: test_json_repair.py
crow-mcp/: README.md  main.py  pyproject.toml  test_results.txt
crow-mcp-server/: main.py  pyproject.toml
crow-mcp-server/crow_mcp_server/: __init__.py  main.py
crow-mcp-server/file_editor/: server.py
crow-mcp-server/file_editor/utils/: file_cache.py  history.py
crow-mcp-server/src/crow_mcp_server/file_editor/: main.py
crow-mcp-server/src/crow_mcp_server/terminal/: main.py
crow-mcp-server/src/crow_mcp_server/web_fetch/: main.py
crow-mcp-server/src/crow_mcp_server/web_search/: main.py
crow-mcp-server/terminal/: constants.py
crow-mcp/scripts/: client.py  debug_test.py  manual_test.py  test_terminal.py  view_logs.py
crow-mcp/src/crow_mcp/: __init__.py
crow-mcp/src/crow_mcp/editor/: main.py
crow-mcp/src/crow_mcp/file_editor/: __init__.py  main.py
crow-mcp/src/crow_mcp/read/: main.py
crow-mcp/src/crow_mcp/server/: __init__.py  logger.py  main.py
crow-mcp/src/crow_mcp/terminal/: __init__.py  backend.py  constants.py  logging_config.py  main.py  metadata.py  session.py
crow-mcp/src/crow_mcp/web_fetch/: __init__.py  main.py
crow-mcp/src/crow_mcp/web_search/: README.md  __init__.py  main.py
crow-mcp/src/crow_mcp/write/: main.py
docs/: 00-architecture-overview.md  01-parallel-tool-calling.md  02-toad-integration.md  03-session-persistence.md  04-cancellation-and-state.md  05-loop-detection.md  06-finish-tool.md  07-python-repl.md  08-system-prompt-skills.md  09-session-continuity-and-compaction.md  ARCHITECTURE.md  CANCELLATION_IMPLEMENTATION.md  CANCELLATION_SANDBOX_COMPARISON.md  CANCELLATION_SUMMARY.md  CRITICAL_CLARIFICATIONS.md  CROW_SDK_ANALYSIS.md  EXTENSION_DISCUSSION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ACP_SESSIONS.md  PROJECT_VISION.md  PROMPT.md  PULSE_CHECK.md  TABLE_SCHEMA.md  THOUGHTS.md  conversation-wrapper-analysis.md  crow-agent-good-stuff.md  merging-agents-guide.md  research-findings.md
docs/essays/: 00-file-editor-semantics-and-fastmcp.md  02-hooks-realization-and-agent-core.md  03-where-we-are-now-and-whats-next.md  04-acp-mcp-configuration.md  04-hooks-as-first-class-citizens.md  05-hook-design-analysis.md  05-python-sdk-that-emerged.md  06-acp-native-sessions.md  07-extension-api-design.md  08-flask-extension-pattern-with-context-variables.md  09-git-commit-violation-last-testament.md  10-monorepo-refactor-to-avoid-cyclic-dependencies.md  11-acp-terminal-tool-swapping.md  12-hook-based-architecture-and-the-frameworkless-framework.md  13-acp-terminal-architecture.md  14-terminal-mcp-implementation.md  15-terminal-mcp-complete.md  16-fractal-filesystem-sandbox-parallel-tool-calling.md  17-composition-over-inheritance-extension-design.md  18-self-injection-the-god-mode-pattern.md  19-pluggy-the-missing-piece.md  20-terminal-tool-failure-bug-report.md  21-callback-architecture-multi-agent-bridges.md  22-the-agent-was-always-here.md  23-cancellation-solid-plan.md  24-async-tool-hanging-debug-thoughts.md  25-acp-client-terminal-integration.md  26-graceful-cancellation-streaming.md  llms-txt-and-agent-skills.md  mcp-server-package-structure.md
docs/journal/: 19Feb2026.md  20Feb2026.md  22Feb2026.md
docs/plans/: acp-tool-enhancements.md
docs/sessions/: crow-acp-good-convo.md  long-winding-session-mcp-tools-missing-terminal.md
kimi-cli-acp/: README.md  __init__.py  convert.py  kaos.py  mcp.py  server.py  session.py  tools.py  types.py
mcp-servers/file_editor/: main.py  pyproject.toml
mcp-servers/terminal/: pyproject.toml
mcp-servers/web/: fetch.py  search.py
sandbox/fastmcp-test/: client.py  pyproject.toml
sandbox/fastmcp-test/src/fastmcp_test/: __init__.py
sandbox/fastmcp-test/src/fastmcp_test/server/: __init__.py  main.py
sandbox/fastmcp-test/src/fastmcp_test/tool/: __init__.py  main.py
scripts/: fetch-url  simple_example.py  web-search
tests/: __init__.py  conftest.py
(+77 files in other folders)
