[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crow"
version = "0.1.0"
description = "Crow ACP-native agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol>=0.8.0",
    "binaryornot>=0.4.4",
    "cachetools>=7.0.0",
    "charset-normalizer>=3.4.4",
    "crow-mcp-server",
    "fastmcp>=2.14.4",
    "httpx>=0.28.0",
    "ipython>=9.9.0",
    "jinja2>=3.1.6",
    "markdownify>=0.14.0",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "readabilipy>=0.3.0",
    "sqlalchemy>=2.0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crow"]

[tool.uv.workspace]
members = [
    "crow-mcp-server",
    "crow-acp-learning",
]

[tool.uv.sources]
crow-mcp-server = { workspace = true }
