[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crow-mcp-server"
version = "0.1.0"
description = "Crow builtin MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "binaryornot>=0.4.4",
    "cachetools>=7.0.0",
    "charset-normalizer>=3.4.4",
    "fastmcp>=2.14.4",
    "httpx>=0.28.0",
    "markdownify>=0.14.0",
    "readabilipy>=0.3.0",
    "pydantic>=2.12.5",
]

[tool.hatch.build.targets.wheel]
packages = ["crow_mcp_server"]

[project.scripts]
crow-mcp-server = "crow_mcp_server.main:mcp.run"
