[project]
name = "crow-mcp"
version = "0.1.3"
description = "Crow builtin MCP server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "binaryornot>=0.4.4",
    "cachetools>=7.0.0",
    "charset-normalizer>=3.4.4",
    "fastmcp>=2.14.4",
    "httpx>=0.28.0",
    "markdownify>=0.14.0",
    "readabilipy>=0.3.0",
    "pydantic>=2.12.5",
    "opencv-python>=4.13.0.92",
]


[project.urls]
Homepage = "https://github.com/odellus/crow-cli/tree/main/crow-mcp"
Repository = "https://github.com/odellus/crow-cli"
Issues = "https://github.com/odellus/crow-cli/issues"
Documentation = "https://github.com/odellus/crow-cli#readme"

[project.scripts]
crow-mcp = "crow_mcp.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --strict-markers"
