[project]
name = "fastmcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.14.5",
    "ipython>=9.10.0",
]

[project.scripts]
fastmcp-test = "fastmcp_test.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
